fixed top-extra position and z-index

--- a/blog/styles/main.css
+++ b/blog/styles/main.css
@@ -111,17 +111,17 @@ body {
       left: 0;
       position: absolute;
       width: 25%;
-      z-index: 0;
+      z-index: 1;
 
   }
   .top-extra {
-    background-color: #eeeeee;
+    background-color: #f9ebb7;
     top: 0;
-    left: 0;
-    right: 0;
+    left: -20%;
+    right: -20%;
     height: 70px;
-    position: fixed;
+    position: absolute;
     width: 100%;
-    z-index: 1;
+    z-index: 0;
   }
 }
